fix: Adjust works-hero-btn alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -204,7 +204,7 @@
 
   /* button */
   .article .btn-row {
-    @apply flex items-center justify-center gap-3.5 md:justify-start;
+    @apply flex items-center justify-center gap-3.5 lg:justify-start;
   }
 
   .article .btn-center {
